--- a/DummyTest.html
+++ b/DummyTest.html
@@ -10,7 +10,9 @@ p    {color: red;}
 <body>
 
 <h1>This is a heading</h1>
+<h2>My new webpage</h2>
 <p>This is a paragraph.</p>
-
+<p> I like this!!!</p>
+<a href="https://www.w3schools.com">This is a link</a>
 </body>
 </html>
