added date and time button

--- a/DummyTest.html
+++ b/DummyTest.html
@@ -14,5 +14,11 @@ p    {color: red;}
 <p>This is a paragraph.</p>
 <p> I like this!!!</p>
 <a href="https://www.w3schools.com">This is a link</a>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
 </body>
 </html>
